[gd_scene load_steps=18 format=3 uid="uid://c2bya7jvn8luj"]

[ext_resource type="Script" path="res://Autoloads/HUD/HUD.gd" id="1_ih3gh"]
[ext_resource type="PackedScene" uid="uid://c7bpadmpmu5g3" path="res://Menus/PauseMenu.tscn" id="1_l1osx"]
[ext_resource type="Script" path="res://Autoloads/HUD/Scoreboard.gd" id="2_ooany"]
[ext_resource type="Texture2D" uid="uid://ba26jwpggkqi2" path="res://Autoloads/HUD/Reticle.svg" id="3_c486t"]
[ext_resource type="Texture2D" uid="uid://b762t7r843oy8" path="res://Autoloads/HUD/Crosshair.svg" id="4_pbdnh"]
[ext_resource type="Texture2D" uid="uid://bakhbfe2uhg4u" path="res://Autoloads/HUD/Scope.png" id="6_1t7b4"]
[ext_resource type="Script" path="res://Autoloads/HUD/MatchTimer.gd" id="7_7tmu3"]
[ext_resource type="Script" path="res://Autoloads/HUD/LeaderList.gd" id="7_28wp2"]
[ext_resource type="Texture2D" uid="uid://crqwjsvsfkcig" path="res://Autoloads/HUD/DmgArrow.png" id="8_yj7y2"]
[ext_resource type="AudioStream" uid="uid://dfs6uabfed51c" path="res://Autoloads/HUD/Screenshot.wav" id="10_ginxb"]

[sub_resource type="LabelSettings" id="LabelSettings_vr44o"]
resource_local_to_scene = true
font_size = 72
font_color = Color(0.121569, 0.121569, 0.121569, 1)
outline_size = 5
outline_color = Color(0.184314, 0.184314, 0.184314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1n8ts"]
bg_color = Color(0, 0, 0, 0.137255)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ypvma"]
bg_color = Color(0, 0, 0, 0.25098)
skew = Vector2(-0.3, 0)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="LabelSettings" id="LabelSettings_vgpdo"]
resource_local_to_scene = true
font_size = 72
font_color = Color(0.8, 0.8, 0.8, 0.784314)

[sub_resource type="LabelSettings" id="LabelSettings_0pkc5"]
font_size = 48
font_color = Color(0.6, 0.6, 0.6, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0h550"]
resource_local_to_scene = true
font_size = 30
font_color = Color(0.121569, 0.121569, 0.121569, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1lxnu"]
resource_local_to_scene = true
font_size = 30
font_color = Color(0.792969, 0.00544758, 0, 1)

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_ih3gh")

[node name="MatchTimer" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -540.0
offset_right = 1920.0
offset_bottom = -441.0
grow_horizontal = 2
grow_vertical = 2
text = "00 : 00"
label_settings = SubResource("LabelSettings_vr44o")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_7tmu3")
metadata/_edit_use_anchors_ = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)

[node name="Reticle" type="Node2D" parent="UI"]

[node name="ReticleBG" type="PanelContainer" parent="UI/Reticle"]
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1n8ts")

[node name="L_Crosshair" type="Sprite2D" parent="UI/Reticle"]
self_modulate = Color(0.392, 0.7592, 0.8, 0.784314)
scale = Vector2(0.333, 0.333)
texture = ExtResource("3_c486t")
offset = Vector2(-50, 0)

[node name="L_Crosshair2" type="Sprite2D" parent="UI/Reticle/L_Crosshair"]
self_modulate = Color(0.1, 0.1, 0.1, 0.8)
position = Vector2(-12.012, 0)
texture = ExtResource("3_c486t")
offset = Vector2(-50, 0)

[node name="R_Crosshair" type="Sprite2D" parent="UI/Reticle"]
self_modulate = Color(0.392, 0.7592, 0.8, 0.784314)
scale = Vector2(0.333, 0.333)
texture = ExtResource("3_c486t")
offset = Vector2(50, 0)
flip_h = true

[node name="R_Crosshair2" type="Sprite2D" parent="UI/Reticle/R_Crosshair"]
self_modulate = Color(0.1, 0.1, 0.1, 0.8)
position = Vector2(12.0117, 0)
texture = ExtResource("3_c486t")
offset = Vector2(50, 0)
flip_h = true

[node name="Crosshair" type="Sprite2D" parent="UI/Reticle"]
self_modulate = Color(0.392, 0.7592, 0.8, 0.784314)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_pbdnh")

[node name="Scope" type="Sprite2D" parent="UI"]
visible = false
texture = ExtResource("6_1t7b4")

[node name="WeaponBG" type="PanelContainer" parent="UI"]
layout_mode = 0
offset_left = 753.0
offset_top = 271.0
offset_right = 909.0
offset_bottom = 485.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ypvma")

[node name="Weapon" type="VBoxContainer" parent="UI/WeaponBG"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = -15

[node name="AmmoInMag" type="Label" parent="UI/WeaponBG/Weapon"]
layout_mode = 2
text = "32"
label_settings = SubResource("LabelSettings_vgpdo")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ExtraAmmo" type="Label" parent="UI/WeaponBG/Weapon"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_0pkc5")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Grenades" type="Label" parent="UI/WeaponBG/Weapon"]
layout_mode = 2
text = "4"
label_settings = SubResource("LabelSettings_0pkc5")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Damage" type="Node2D" parent="UI"]

[node name="Left" type="Sprite2D" parent="UI/Damage"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-1397, -107)
rotation = -3.14159
scale = Vector2(1.38477, 1.38477)
texture = ExtResource("8_yj7y2")
metadata/_edit_group_ = true

[node name="Right" type="Sprite2D" parent="UI/Damage"]
modulate = Color(1, 1, 1, 0)
position = Vector2(1413, 61)
scale = Vector2(1.38477, 1.38477)
texture = ExtResource("8_yj7y2")
metadata/_edit_group_ = true

[node name="Up" type="Sprite2D" parent="UI/Damage"]
modulate = Color(1, 1, 1, 0)
position = Vector2(164, -1046)
rotation = -1.57079
scale = Vector2(1.38477, 2.15647)
texture = ExtResource("8_yj7y2")
metadata/_edit_group_ = true

[node name="Down" type="Sprite2D" parent="UI/Damage"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-142, 1034)
rotation = 1.57081
scale = Vector2(1.38477, 2.15647)
texture = ExtResource("8_yj7y2")
metadata/_edit_group_ = true

[node name="HealthMod" type="CanvasModulate" parent="UI"]
position = Vector2(-959, -540)

[node name="HealthBar" type="VBoxContainer" parent="UI/HealthMod"]
custom_minimum_size = Vector2(75, 0)
offset_left = 55.0
offset_top = 91.0
offset_right = 130.0
offset_bottom = 976.0
theme_override_constants/separation = 15

[node name="Health1" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 135)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="Health2" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 135)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="Health3" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 135)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="Health4" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 135)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="Health5" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 135)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="Health6" type="ColorRect" parent="UI/HealthMod/HealthBar"]
custom_minimum_size = Vector2(0, 135)
layout_mode = 2
color = Color(0.94902, 0.137255, 0.196078, 1)

[node name="ArmorBar" type="VBoxContainer" parent="UI/HealthMod"]
custom_minimum_size = Vector2(75, 0)
offset_left = 1793.0
offset_top = 91.0
offset_right = 1868.0
offset_bottom = 976.0
theme_override_constants/separation = 15

[node name="Armor1" type="ColorRect" parent="UI/HealthMod/ArmorBar"]
custom_minimum_size = Vector2(0, 210)
layout_mode = 2
color = Color(0.207843, 0.368627, 1, 0)

[node name="Armor2" type="ColorRect" parent="UI/HealthMod/ArmorBar"]
custom_minimum_size = Vector2(0, 210)
layout_mode = 2
color = Color(0.207843, 0.368627, 1, 0)

[node name="Armor3" type="ColorRect" parent="UI/HealthMod/ArmorBar"]
custom_minimum_size = Vector2(0, 210)
layout_mode = 2
color = Color(0.207843, 0.368627, 1, 0)

[node name="Armor4" type="ColorRect" parent="UI/HealthMod/ArmorBar"]
custom_minimum_size = Vector2(0, 210)
layout_mode = 2
color = Color(0.207843, 0.368627, 1, 0)

[node name="Activate" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 783.0
offset_top = 561.0
offset_right = -783.0
offset_bottom = -471.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.109804)

[node name="Label" type="Label" parent="Activate"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 817.0
offset_top = 515.0
offset_right = -817.0
offset_bottom = -516.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = " Press 'E' to activate"
label_settings = SubResource("LabelSettings_0h550")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Locked" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 783.0
offset_top = 561.0
offset_right = -783.0
offset_bottom = -471.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.109804)

[node name="Label" type="Label" parent="Locked"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 817.0
offset_top = 515.0
offset_right = -817.0
offset_bottom = -516.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Door is locked"
label_settings = SubResource("LabelSettings_1lxnu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LockedTimer" type="Timer" parent="Locked"]
one_shot = true

[node name="Score" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -570.0
offset_top = -310.0
offset_right = 1350.0
offset_bottom = 770.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.603867, 0.603867)
script = ExtResource("2_ooany")

[node name="Name" type="Label" parent="Score"]
layout_mode = 0
offset_left = 72.0
offset_top = 108.0
offset_right = 289.0
offset_bottom = 207.0
theme_override_font_sizes/font_size = 72
text = "Name"

[node name="Kill" type="Label" parent="Score"]
layout_mode = 0
offset_left = 646.0
offset_top = 108.0
offset_right = 787.0
offset_bottom = 207.0
theme_override_font_sizes/font_size = 72
text = "Kills"

[node name="Deaths" type="Label" parent="Score"]
layout_mode = 0
offset_left = 1237.0
offset_top = 108.0
offset_right = 1482.0
offset_bottom = 207.0
theme_override_font_sizes/font_size = 72
text = "Deaths"

[node name="List" type="ItemList" parent="Score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -888.0
offset_top = -326.0
offset_right = 888.0
offset_bottom = 436.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_constants/h_separation = 233
theme_override_font_sizes/font_size = 72
allow_search = false
max_columns = 3
same_column_width = true
fixed_column_width = 353

[node name="LeaderList" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 188.0
offset_top = 685.0
offset_right = 466.0
offset_bottom = 976.0
script = ExtResource("7_28wp2")

[node name="List" type="VBoxContainer" parent="LeaderList"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 2

[node name="FadeInOut" type="ColorRect" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1082.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="PauseMenu" parent="." instance=ExtResource("1_l1osx")]
visible = false
top_level = true

[node name="ScreenshotSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ginxb")

[connection signal="timeout" from="Locked/LockedTimer" to="." method="_hide_locked"]
